<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_options"
        android:icon="@drawable/ic_filter_list_24"
        android:title="@string/filter_sort_options"
        android:contentDescription="@string/filter_sort_options"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction">
        <menu>
            <item android:id="@+id/menu_cancel_filters"
                android:title="@string/cancel_filter_sort"
                android:contentDescription="@string/cancel_filter_sort"
                app:showAsAction="never"/>
            <item android:id="@+id/menu_filter"
                android:contentDescription="@string/filter"
                android:title="@string/filter" >
                <menu>
                    <item android:id="@+id/menu_filter_time"
                        android:title="@string/filter_by_date_time"
                        android:contentDescription="@string/filter_by_date_time"/>
                    <item android:id="@+id/menu_filter_room"
                        android:title="@string/filter_by_room"
                        android:contentDescription="@string/filter_by_room"/>
                </menu>
            </item>

            <item android:id="@+id/menu_sort"
                android:title="@string/sort"
                android:contentDescription="@string/sort"
                app:showAsAction="never">
                <menu>
                    <item android:id="@+id/menu_sort_by_time"
                        android:title="@string/sort_by_date_time"
                        android:contentDescription="@string/sort_by_date_time"/>
                    <item android:id="@+id/menu_sort_by_room"
                        android:title="@string/sort_by_room"
                        android:contentDescription="@string/sort_by_room"/>
                </menu>

            </item>
        </menu>
    </item>
</menu>